--- a/src/scss/module/_m-popup-share.scss
+++ b/src/scss/module/_m-popup-share.scss
@@ -1,20 +1,40 @@
 @use "../base/variables" as v;
+@use "../base/mixins" as m;
 
 .m-popup-share {
   width: 100%;
   height: 4rem;
   padding: 0 32px;
+  position: absolute;
   display: flex;
   align-items: center;
-  position: absolute;
   bottom: 0;
-  left: 0;
-  transform: translateX(100%);
+  right: -100%;
 
   color: v.$grey-very-soft;
   background: v.$grey-strong;
-  transition: transform 0.3s;
   z-index: 10;
+
+  &:not(.no-transition) {
+    transition: transform 0.3s, opacity 0.3s;
+  }
+
+  @include m.media("md", v.$media-query-approach) {
+    width: auto;
+    height: fit-content;
+    padding: 17px 32px;
+    right: 32px;
+    bottom: 90px;
+    border-radius: 10px;
+    transform: translate(0, 30%);
+
+    opacity: 0;
+    box-shadow: 0px 10px 10px 0px rgba(201, 213, 225, 0.5);
+  }
+  @include m.media("lg", v.$media-query-approach) {
+    transform: translate(calc(50% - 1.5rem), 30%);
+  }
+
   &__txt {
     margin-right: 21px;
 
@@ -23,5 +43,27 @@
   }
   &__icon {
     margin-right: 21px;
+  }
+
+  /* ========== triangle ========== */
+  @include m.media("md", v.$media-query-approach) {
+    &::before {
+      content: "";
+      display: block;
+      width: 24px;
+      height: 24px;
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      transform: rotate(45deg) translateX(-20%) translateY(50%);
+
+      background: v.$grey-strong;
+    }
+  }
+  @include m.media("lg", v.$media-query-approach) {
+    &::before {
+      left: 50%;
+      right: initial;
+    }
   }
 }
