--- a/src/scss/module/_m-preview-card.scss
+++ b/src/scss/module/_m-preview-card.scss
@@ -7,6 +7,7 @@
   border-radius: 0.625rem;
 
   background: v.$pure-white;
+  box-shadow: 0px 40px 40px -10px rgba(201, 213, 225, 0.5);
   overflow: hidden;
 
   @include m.media("md", v.$media-query-approach) {
